# IOT-ecosystem-for-Warehouse

./: README.md  Video report.txt
F4_REG_LIB/: .cproject  .project  F4_REG_LIB Debug.launch
F4_REG_LIB/AppLibraries/ESP32_API/: ESP32_API.cpp  ESP32_API.h
F4_REG_LIB/AppLibraries/FT6236/: FT6236.cpp  FT6236.h
F4_REG_LIB/AppLibraries/GateWay_API/: GateWay_API.cpp  GateWay_API.h
F4_REG_LIB/AppLibraries/LORA/: LORA.cpp  LORA.h
F4_REG_LIB/AppLibraries/LoRa_API/: LoRa_API.cpp  LoRa_API.h
F4_REG_LIB/AppLibraries/SPIFLASH/: SPIFLASH.cpp  SPIFLASH.h
F4_REG_LIB/AppLibraries/User_Interface/: lib_out.cpp  lib_out.h  ui.cpp  ui.h  ui_comp.cpp  ui_comp.h  ui_helpers.cpp
F4_REG_LIB/AppLibraries/lvgl/: lv_conf.h
F4_REG_LIB/Debug/: makefile  objects.list  sources.mk
F4_REG_LIB/Debug/Src/: main.d  subdir.mk
F4_REG_LIB/Debug/Startup/: subdir.mk
F4_REG_LIB/PeriphLibraries/: PERIPH_USED.h
F4_REG_LIB/PeriphLibraries/I2C_F4xx/: I2C_F4xx.cpp  I2C_F4xx.h
F4_REG_LIB/PeriphLibraries/SPI_F4xx/: SPI_F4xx.hpp
F4_REG_LIB/Src/: main.cpp
F4_REG_LIB/Src/Config/: Config.cpp  (+1 more)
GateWay_ESP/: .cproject  .project  sdkconfig  sdkconfig.old
GateWay_ESP/main/: CMakeLists.txt  main.c
GateWay_ESP/main/Ethernet/: Ethernet.c  Ethernet.h
GateWay_ESP/main/GateWay_API/: GateWay_API.c  GateWay_API.h
GateWay_ESP/main/MQTT/: MQTT.c  MQTT.h
GateWay_ESP/main/UART/: .cproject  .project  UART.c  UART.h
GateWay_ESP/main/WiFi/: WiFi.c  WiFi.h
Node/: CMakeLists.txt  sdkconfig
Node/main/: .cproject  CMakeLists.txt  deepsleep.h  lora_receiver.cpp  modun.h  pcf8574.h  sht31.h  sht3x.h
(+770 files in other folders)
